# ImageGenWeb

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  app.py  compose.yaml  deploy-docker.cmd  deploy-docker.ps1  docker-autostart.ps1  package-lock.json  package.json  playwright.config.js  pyproject.toml  requirements-dev.txt  requirements.txt  run_worker.py  start.ps1
.github/workflows/: ci.yml
config/: channels.yaml  chat_models.yaml
docker/lucida/: Dockerfile  docker-entrypoint.sh  pyproject.toml  runtime.py
docs/: architecture.md  lucida-matting.md
imagegen/: app.py  container.py  errors.py  extensions.py  models.py  serializers.py  storage.py  validation.py  version.py  worker.py  worker_health.py
imagegen/config/: __init__.py  base.py  channels.py  chat_models.py  repository.py  service.py
imagegen/integrations/: __init__.py  diagnostics.py  images.py  matting.py  openai_chat.py
imagegen/services/: __init__.py  auth.py  automatic_titles.py  billing.py  common.py  conversation.py  conversation_context.py  conversation_prompts.py  generations.py  image_library.py  image_reviews.py  prompt_drafts.py  retention.py  runtime_logs.py  series.py  settings.py  starter_content.py  structured_output.py  users.py  workspace_settings.py  workspaces.py
imagegen/web/: __init__.py  admin.py  generations.py  image_tools.py  library.py  pages.py  shared.py  workspaces.py
migrations/: env.py  script.py.mako
scripts/: backup.py  build_case_catalog.py
static/css/: app.css  studio-workflow.css
templates/: base.html
tests/: README.md
(+107 files in other folders)
